--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,5 +5,8 @@
   "CONTACT": "Contact",
   "ABOUT_DETAIL":"This is about detail page.",
   "SUB1": "Sub Page 1",
-  "SUB2": "Sub Page 2"
+  "SUB2": "Sub Page 2",
+  "OLDCONTACT": "Old Contact",
+  "NEWCONTACT": "New Contact",
+  "TODO":"Todo List"
 }
